--- a/BuzzTracker/app/src/main/res/values/strings.xml
+++ b/BuzzTracker/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     </string>
     <string name="title_activity_login">Sign in</string>
     <string name="title_activity_login_screen">LoginScreen</string>
+    <string name="title_activity_locations_list">LocationsList</string>
 </resources>
