--- a/BuzzTracker/app/src/main/res/values/strings.xml
+++ b/BuzzTracker/app/src/main/res/values/strings.xml
@@ -1,20 +1,20 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">BuzzTracker</string>
 
     <string name="google_map_api_key">AIzaSyBbyaxtZjUVYLgbEDBUNaS0mMOe_Kyo4LY</string>
     <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
+    <string name="prompt_email" tools:keep="@string/prompt_email">Email</string>
+    <string name="prompt_password" tools:keep="@string/prompt_password">Password (optional)</string>
+    <string name="action_sign_in" tools:keep="@string/action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short" tools:keep="@string/action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email" tools:keep="@string/error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password" tools:keep="@string/error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password" tools:keep="@string/error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required" tools:keep="@string/error_field_required">This field is required</string>
+    <string name="permission_rationale" tools:keep="@string/permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
-    <string name="title_activity_login">Sign in</string>
-    <string name="title_activity_login_screen">LoginScreen</string>
-    <string name="title_activity_locations_list">LocationsList</string>
+    <string name="title_activity_login" tools:keep="@string/title_activity_login">Sign in</string>
+    <string name="title_activity_login_screen" tools:keep="@string/title_activity_login_screen">LoginScreen</string>
+    <string name="title_activity_locations_list" tools:keep="@string/title_activity_locations_list">LocationsList</string>
 </resources>
