--- a/BuzzTracker/app/src/main/res/values/strings.xml
+++ b/BuzzTracker/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="title_activity_login" tools:keep="@string/title_activity_login">Sign in</string>
     <string name="title_activity_login_screen" tools:keep="@string/title_activity_login_screen">LoginScreen</string>
     <string name="title_activity_locations_list" tools:keep="@string/title_activity_locations_list">LocationsList</string>
+    <string name="title_activity_forgot_password">ForgotPassword</string>
 </resources>
